maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:54: error: Missing closing brace `}' assumed here
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^